update the folder methods previously ignored by .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ better_visual_collect.py
 output/all_record.txt
 
 # Big files
-# output/
-datasets/
+output/
+my_methods/
 **/*.png
 **/*.zip
 **/*.7z
