- Add the support of Github Action for formatting code. - Add a better function for printint the final results. - Rename `configs/misc.py` to `configs/utils/config_generator.py`. - Fix some mistakes in `rgbd_sod_methods.py`. - Delete some useless comments.

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,8 @@
-/waiting/
+# private files
 /output/
-better_visual_collect.py
-output/all_record.txt
+/untracked/
 
 # Big files
-output/
-my_methods/
 **/*.png
 **/*.zip
 **/*.7z
