--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,3 +1,5 @@
+# https://github.com/marketplace/actions/pre-commit
+
 name: pre-commit
 
 on:
@@ -10,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - uses: actions/setup-python@v2
     - uses: pre-commit/action@v2.0.0
       with:
