* 2022年4月23日     - 为了便于使用和配置，对大量代码进行了调整和修改，与之前版本相比，使用上也存在部分差异。     - 评估部分：       - 支持多个方法的json文件同时使用评估。       - 更新了指标统计类，便于更灵活的指定不同的指标。       - 对一些医学二值分割的指标提供了支持。     - 绘图部分：       - 支持多个曲线npy文件同时用于绘图。       - 将个性化配置尽可能独立出来，提供了独立的绘图配置文件。       - 重构了绘图类，便于使用yaml文件对matplotlib的默认设定进行覆盖。

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 # Big files
 **/*.png
+**/*.pdf
+**/*.jpg
+**/*.bmp
 **/*.zip
 **/*.7z
 **/*.rar
+**/*.tar*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -274,7 +278,7 @@ gen
 /output/
 /untracked/
 /configs/
-/*.py
-/*.sh
+# /*.py
+# /*.sh
 /results/rgb_sod.md
 /results/htmls/*.html
